--- a/index.html
+++ b/index.html
@@ -47,7 +47,20 @@
 
 <img src="http://www.w3schools.com/images/w3schools_green.jpg" alt="W3Schools.com">
     </div>
+    
+    document.write("Hello World");
 
+    <!--alert("Hello World");-->
+
+    document.getElementById("boxModel").innerHTML = "Hello World"
+
+    console.log("Hello World");
+
+    document.write("Hello World");
+
+    function show() {
+        document.getElementById("demoButton").innerHTML=Date();
+    }
 
 </body>
 
